[package]
name = "sql_query_plan"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
futures = "0.3"
prost = "0.13.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.139"
serde_derive = "1.0"
substrait = { version = "0.48.0", features = ["serde", "parse"] }
thiserror = "2.0"
tonic = "0.12"
tracing = "0.1"
uuid = { version = "1.17.0", features = ["v4"] }
